--- a/03-01/App.config
+++ b/03-01/App.config
@@ -3,8 +3,11 @@
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="ConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EF6X_03_01;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="ConnectionString" connectionString="Data Source=MACBOOK;Initial Catalog=EF6X_03_01;Persist Security Info=True;User ID=sa;Password=6688" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
   <startup> 
