--- a/03_04/packages.config
+++ b/03_04/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.9.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.8.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
@@ -18,5 +18,6 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net452" />
 </packages>
