--- a/MVC_Repository/MVC_Repository.csproj
+++ b/MVC_Repository/MVC_Repository.csproj
@@ -198,9 +198,14 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Domain\Concrete\EFDbContext.cs" />
     <Compile Include="Domain\Concrete\EFDbInitializer.cs" />
-    <Compile Include="Domain\Entities\Class1.cs" />
+    <Compile Include="Domain\Repositories\GenericRepository.cs" />
+    <Compile Include="Domain\Repositories\IGenericRepository.cs" />
+    <Compile Include="Domain\Repositories\ISysUserRepository.cs" />
+    <Compile Include="Domain\Repositories\SysUserRepository.cs" />
+    <Compile Include="Domain\UnitOfWork\UnitOfWork.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -208,7 +213,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Domain\Entities\SysRole.cs" />
-    <Compile Include="Domain\Entities\SysUser.cs" />
+    <Compile Include="Domain\Entities\SysUserInfo.cs" />
     <Compile Include="Domain\Entities\SysUserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -273,6 +278,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
