--- a/MVC_Repository/MVC_Repository.csproj
+++ b/MVC_Repository/MVC_Repository.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Domain\Concrete\EFDbContext.cs" />
     <Compile Include="Domain\Concrete\EFDbInitializer.cs" />
+    <Compile Include="Domain\Entities\Test.cs" />
     <Compile Include="Domain\Repositories\GenericRepository.cs" />
     <Compile Include="Domain\Repositories\IGenericRepository.cs" />
     <Compile Include="Domain\Repositories\ISysUserRepository.cs" />
@@ -209,12 +210,28 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="HtmlHelpers\PagingHelpers.cs" />
+    <Compile Include="Migrations\201812130704597_InitialCreate.cs" />
+    <Compile Include="Migrations\201812130704597_InitialCreate.Designer.cs">
+      <DependentUpon>201812130704597_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812130706595_add-test-table.cs" />
+    <Compile Include="Migrations\201812130706595_add-test-table.Designer.cs">
+      <DependentUpon>201812130706595_add-test-table.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812130711153_add-test-table-column-testen.cs" />
+    <Compile Include="Migrations\201812130711153_add-test-table-column-testen.Designer.cs">
+      <DependentUpon>201812130711153_add-test-table-column-testen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Domain\Entities\SysRole.cs" />
     <Compile Include="Domain\Entities\SysUserInfo.cs" />
     <Compile Include="Domain\Entities\SysUserRole.cs" />
+    <Compile Include="Models\PagingInfo.cs" />
+    <Compile Include="Models\UsersListViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -280,6 +297,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\Shared\_PartialPage.cshtml" />
+    <Content Include="Views\Shared\_PartialViewDate.cshtml" />
+    <Content Include="Views\User\SharedDate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -291,6 +311,17 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201812130704597_InitialCreate.resx">
+      <DependentUpon>201812130704597_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812130706595_add-test-table.resx">
+      <DependentUpon>201812130706595_add-test-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812130711153_add-test-table-column-testen.resx">
+      <DependentUpon>201812130711153_add-test-table-column-testen.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
