--- a/MVC_Repository/Views/Web.config
+++ b/MVC_Repository/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="MVC_Repository" />
+        <add namespace="MVC_Repository.HtmlHelpers" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
