--- a/EFUnitOfWork/EF.Data/App.config
+++ b/EFUnitOfWork/EF.Data/App.config
@@ -3,4 +3,8 @@
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+  <connectionStrings>
+    <add name="DbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EF6X_08;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
+  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
