--- a/EFUnitOfWork/EFUnitOfWork/EFUnitOfWork.csproj
+++ b/EFUnitOfWork/EFUnitOfWork/EFUnitOfWork.csproj
@@ -101,6 +101,10 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\datepicker3.css" />
+    <Content Include="Content\datepicker3.min.css" />
+    <Content Include="Content\site.css" />
+    <Content Include="Content\site.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -120,12 +124,23 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Mappings\AutoMapperProfile.cs" />
+    <Compile Include="Models\BookDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UploadUtil\MergeFileManager.cs" />
+    <Compile Include="UploadUtil\SortedFile.cs" />
+    <Compile Include="UploadUtil\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-1.9.0.min.map" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Book\CreateEditBook.cshtml" />
+    <Content Include="Views\Book\DeleteBook.cshtml" />
+    <Content Include="Views\Book\DetailBook.cshtml" />
+    <Content Include="Views\Book\Index.cshtml" />
+    <Content Include="Views\Book\Upload.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -134,8 +149,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Views\Book\" />
+    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EF.Core\EF.Core.csproj">
