--- a/EFUnitOfWork/EFUnitOfWork/Web.config
+++ b/EFUnitOfWork/EFUnitOfWork/Web.config
@@ -10,6 +10,10 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="DbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EF6X_08;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
