--- a/EFUnitOfWork/EF.Data/EF.Data.csproj
+++ b/EFUnitOfWork/EF.Data/EF.Data.csproj
@@ -31,13 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+    <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+    <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -55,6 +53,11 @@
     <Compile Include="EFDbContext.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Mapping.cs" />
+    <Compile Include="Migrations\201812280827545_20181228-initial.cs" />
+    <Compile Include="Migrations\201812280827545_20181228-initial.Designer.cs">
+      <DependentUpon>201812280827545_20181228-initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="UnitOfWork.cs" />
@@ -68,6 +71,11 @@
       <Project>{4f073a8f-b03b-4211-9b36-fff31aabe68c}</Project>
       <Name>EF.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201812280827545_20181228-initial.resx">
+      <DependentUpon>201812280827545_20181228-initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
