--- a/DDD/DDD.Web/DDD.Web.csproj
+++ b/DDD/DDD.Web/DDD.Web.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Respository\BaseRepository.cs" />
     <Compile Include="Respository\IRepository.cs" />
     <Compile Include="Respository\IStudentRepository.cs" />
     <Compile Include="Respository\StudentRepository.cs" />
