--- a/08-01-01/EF.Data/EF.Data.csproj
+++ b/08-01-01/EF.Data/EF.Data.csproj
@@ -51,8 +51,11 @@
   <ItemGroup>
     <Compile Include="Configuration\EFDbConfiguration.cs" />
     <Compile Include="EFDbContext.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Mapping\BookMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
