--- a/08-01-01/Ef.WebSite/Web.config
+++ b/08-01-01/Ef.WebSite/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="DbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EF6X_08_01;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
