--- a/08-02-01/EF.Data/EF.Data.csproj
+++ b/08-02-01/EF.Data/EF.Data.csproj
@@ -50,18 +50,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\EFDbConfiguration.cs" />
-    <Compile Include="EFDbConext.cs" />
+    <Compile Include="EFDbContext.cs" />
     <Compile Include="IDbContext.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Mapping\UserMap.cs" />
     <Compile Include="Mapping\UserProfileMap.cs" />
+    <Compile Include="Migrations\201903120322191_init.cs" />
+    <Compile Include="Migrations\201903120322191_init.Designer.cs">
+      <DependentUpon>201903120322191_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +76,11 @@
       <Project>{9a2304b7-88ee-43f2-b075-b1ea38e0b9d5}</Project>
       <Name>EF.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201903120322191_init.resx">
+      <DependentUpon>201903120322191_init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
