--- a/EFUnifOfWorkDI/EF.Data/App.config
+++ b/EFUnifOfWorkDI/EF.Data/App.config
@@ -3,4 +3,8 @@
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
+  <connectionStrings>
+    <add name="DbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EF6X_08_02;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
 </configuration>
